--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Website Title -->
-    <title>John Doe - Professional web designer and photographer</title>
+    <title>Jake Pineda - Cloud Computing Sales & Architect</title>
     <!-- Bootstrap -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Font-Awesome -->
@@ -48,7 +48,6 @@
 					<div class="icon-list">
 						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
 						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
-						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
 						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
 						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
@@ -74,7 +73,7 @@
                     J<span style="color:#E04343;">o</span>hn<br/>
                     <span>D<span style="color:#FFE800">o</span>e</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Web Designer,Photographer,3d Artist</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Lover of Music, Cloud Native Technology & Books</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
@@ -105,9 +104,10 @@
 		    <!-- WELCOME TEXT -->
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-                <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
+                <h1 class="arrow">Who <span>Am</span> I?</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>I am enough of an artist to draw freely upon my imagination. The point is that when I see a sunset or a <a href="#">waterfall</a> or something, for a split second it's so great, because for a little bit I'm out of my brain, and it's got nothing to do with me. I'm not trying to figure it out, you know what I mean? And I wonder if I can somehow find a way to maintain that mind stillness.</p>
+                <p>Experienced bilingual technology professional in cloud computing, sales, and client success. Skilled in pipeline development, revenue generation, and B2B solutions. With a Computer Science background, industry certifications, and a strong work ethic, I drive IT sales through informed decisions. I've enjoyed producing music content, and now focus on writing fun educational stories for my kids. Have a read in my Github Repo!
+</p>
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@
         <!-- Headline -->
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">I do amazing things for clients</h1>
+                <h1 class="arrow">I strive to learn continuosly</h1>
               </div>
             </div>
             <div class="row">
@@ -135,27 +135,26 @@
                     <div class="icon">
                       <i class="fa fa-camera"></i><!-- Icon -->
                     </div>
-                    <h2>Photographer</h2><!-- Title -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p><!-- Description -->
+                    <h2>Sales Professional</h2><!-- Title -->
+                    <p>An experienced professional with a proven track record in driving revenue growth and establishing strategic partnerships in the tech industry. My expertise includes leading membership drives, utilizing open-source technologies, and advancing cloud-native tech globally. I excel in delivering hybrid cloud object storage solutions, creating joint market solutions, and managing high-value transactions across various global regions including North America, Europe, AIPAC, and Latin America. Skilled in aligning client needs with partner solutions, I focus on partner satisfaction and revenue growth by mentoring and training teams. As an Enterprise Sales Executive, I have demonstrated leadership in B2B SaaS sales, team management, talent development, and client relationship building.</p><!-- Description -->
                   </div>
           <!-- Service Box 2 -->
                   <div class="col-md-4 wp2 item delay-05s">
                     <div class="icon">
                       <i class="fa fa-desktop"></i><!-- Icon -->
                     </div>
-                    <h2>Web Designer</h2><!-- Title -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p><!-- Description -->
+                    <h2>Cloud Technologies</h2><!-- Title -->
+                    <p>
+I am a skilled professional in cloud computing and cloud-native technology, with a strong background in information technology and network technology. My experience includes driving revenue growth through strategic initiatives, delivering customized cloud solutions, and fostering strategic partnerships. I possess expertise in cloud management, virtualization, network security, and technical problem-solving. Proficient in scripting languages like Python and PowerShell, I also hold certifications in key cloud and AI technologies. My approach combines technical acumen with a commitment to continuous learning and community engagement.</p><!-- Description -->
                   </div>
           <!-- Service Box 3 -->
                   <div class="col-md-4 wp2 item delay-1s">
                     <div class="icon">
                       <i class="fa fa-cubes"></i><!-- Icon -->
                     </div>
-                    <h2>3D Artist</h2><!-- Title -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-                    primis in faucibus.</p><!-- Description -->
+                    <h2>Forever Curious</h2><!-- Title -->
+                    <p>
+I am deeply committed to continuous learning and professional development, as evidenced by my ongoing pursuit of advanced certifications and educational achievements in the field of technology. My journey reflects a dedication to mastering cloud computing, network technology, and emerging AI trends. Balancing professional responsibilities with academic pursuits, I actively engage in expanding my technical and strategic skills. This unrelenting drive for knowledge not only enhances my professional capabilities but also demonstrates my adaptability and eagerness to stay at the forefront of technological advancements. My enthusiasm for learning and growth is a cornerstone of my professional identity.</p><!-- Description -->
                   </div>
           </div>
                   <div class="clearfix"></div>
@@ -175,31 +174,13 @@
 					<div class="about-image" style="background-image:url(img/about1.png)"></div><!-- about image 1 -->
 				</div>
 				<div class="col-md-6 about-text">
-					<h6>High quality webdesign</h6><!-- headline-->
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p><br><!-- About Text 1 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->			
+					<h6></h6><!-- headline-->
+					<p></p><br><!-- About Text 1 -->
+					<a href="index.html#team" class="weight-outline-btn"></a><!-- read more button  -->			
 				</div>
 			</div>
 			<!-- About 2 -->
-			<div class="row">
-				<div class="col-md-6 about-text">
-					<h6>Professional Photography</h6><!-- Headline -->
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p><br><!-- About Text 2 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a>	<!-- read more button  -->				
-				</div>
-				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/about2.png)"></div><!-- about image 2 -->
-				</div>
-			</div>
-			<!-- About 3 -->
-			<div class="row color-bg">
-				<div class="col-md-6 nopadding features-intro-img">
-					<div class="about-image" style="background-image:url(img/about3.png)"></div><!-- about image 3 -->
-				</div>
-				<div class="col-md-6 about-text">
-					<h6>3d modeling and animations</h6><!-- Headline-->
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p><br><!-- About Text 3 -->
-					<a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->					
+							
 				</div>
 			</div>
 		</div>
