--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     J<span style="color:#E04343;">o</span>hn<br/>
                     <span>D<span style="color:#FFE800">o</span>e</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Lover of Music, Cloud Native Technology & Books</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Tech Sales Professional, Cloud Native Technology & Books</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
@@ -199,7 +199,7 @@ I am deeply committed to continuous learning and professional development, as ev
 		    <!-- Headline -->
             <div class="row">
               <h1 class="arrow">
-                Recent <span>Porojects</span>
+                Recent <span>Projects</span>
               </h1>
             </div>
           </div>
@@ -303,7 +303,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="index.html#contact" class="outline-btn">hire john doe</a>
+                <a href="index.html#contact" class="outline-btn"></a>
               </div>
             </div>
           </div>
@@ -422,12 +422,9 @@ I am deeply committed to continuous learning and professional development, as ev
 				</div>
 				<!-- Clients / Testimonials -->
 				<div class="col-md-6 nopadding about-text">
-				<h6>What our clients said</h6>
+				<h6></h6>
 					<div id="clientSlider">
 					   <ul class="slides">
-					       <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Pete Rock, A New Tomorrow</small></p></li>
-						   <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Michael Snowden, Creativeland CEO</small></p></li>
-						  <li><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>	<small>- Tom Davis, GreenWonder</small></p>	</li>
 					   </ul>
 					</div>
 				</div>
@@ -480,36 +477,15 @@ I am deeply committed to continuous learning and professional development, as ev
               </div>
             </div>
             <div class="row contact-details">
-			  <!-- Adress Box -->
-              <div class="col-md-4">
-                <div class="dark-box box-hover">
-                  <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-                  <p>23 Ipsum street, New York</p>
-                </div>
-              </div>
-			  <!-- Phone Number Box -->
-              <div class="col-md-4">
-                <div class="dark-box box-hover">
-                  <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p>+12 345 6789</p>
-                </div>
-              </div>
 			  <!-- E-Mail Box -->
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="index.html#">info@themewagon.com</a></p>
+                  <p><a href="index.html#">jakepin85@gmail.com</a></p>
                 </div>
               </div>
             </div>
 			<div class="row">
-			  <!-- Google Maps (Change your Settings below) -->
-			  <div class="col-md-6">
-			    <div id="googlemaps"></div>
-			  </div>
-			  <!-- Contact Form -->
-			  <div class="col-md-6 contact">
-			     <form role="form">
 				            <!-- Name -->
                             <div class="row">
                                 <div class="col-md-6">
@@ -541,11 +517,8 @@ I am deeply committed to continuous learning and professional development, as ev
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-dribbble"></i></a></li><!-- dribble -->
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- twitter -->
-                  <li><a href="index.html#" class="social-btn"><i class="fa fa-facebook"></i></a></li><!-- facebook -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-deviantart"></i></a></li><!-- deviantart -->
-				  <li><a href="index.html#" class="social-btn"><i class="fa fa-youtube"></i></a></li><!-- youtube -->
+                  <li><a href="https://www.linkedin.com/in/jake-p-8348127b/" class="social-btn"><i class="fa fa-dribbble"></i></a></li><!-- Linkedin -->
+                  <li><a href="https://github.com/catinahat85" class="social-btn"><i class="fa fa-twitter"></i></a></li><!-- GitHub -->
                 </ul>
               </div>
             </div>
