--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="The Big Move - Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -222,7 +222,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Hazel to the Rescue! -Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -232,7 +232,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="The Quest for Titan's Fire - Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -242,7 +242,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="The Magical Network Adventure - Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -252,7 +252,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Project Five - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Cloud Sisters: Attack of the Specter - Ease into K8s"><img class="grayscale" src="img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -262,7 +262,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Project Six - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Cloud Sisters: Lunch Tour - Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -272,7 +272,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="Project Seven - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="The Container Escape! - Ease Into K8s"><img class="grayscale" src="img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -282,7 +282,7 @@ I am deeply committed to continuous learning and professional development, as ev
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Project Eight - Lorem Ipsum"><img class="grayscale" src="img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Coming Soon!"><img class="grayscale" src="img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
