--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
-                    J<span style="color:#E04343;">o</span>hn<br/>
-                    <span>D<span style="color:#FFE800">o</span>e</span>
+                    J<span style="color:#E04343;">a</span>ke<br/>
+                    <span>Pi<span style="color:#FFE800">ne</span>da</span>
                   </h1><!-- Title -->
                   <h3 class="animated fadeInUp delay-05s"><span class="rotate">Tech Sales Professional, Cloud Native Technology & Books</span></h3><!-- Text Rotator -->
                 </div>
