--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     J<span style="color:#E04343;">a</span>ke<br/>
                     <span>Pi<span style="color:#FFE800">ne</span>da</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Tech Sales Professional, Cloud Native Technology & Books</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Tech Sales Professional, Children's Book Author, Cloud Native Advocate</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
