--- a/index.html
+++ b/index.html
@@ -175,7 +175,21 @@ I am deeply committed to continuous learning and professional development, as ev
 				</div>
 				<div class="col-md-6 about-text">
 					<h6></h6><!-- headline-->
-					<p></p><br><!-- About Text 1 -->
+					<p>Website long blurb
+
+Jake's career since 2013 is a testament to strategic professional growth in the IT sector, skillfully integrated with academic achievements and a series of targeted certifications.
+<p>
+Beginning in April 2013, Jake embarked on his journey as an Enterprise Sales Executive at Creditsafe USA in Allentown, PA. In this role, he excelled in leading both enterprise sales teams and a telesales floor, demonstrating his versatility and leadership in sales environments. During this phase, he recognized the value of enhancing his technical expertise and began pursuing relevant IT certifications, laying a robust foundation for his future career development.
+<p>
+In June 2021, Jake transitioned to ProphetLogic as a Solutions Team Lead. This significant career shift marked his move towards more technical roles in IT solutions. Concurrently, he initiated his academic journey in an Associate degree program, acknowledging the importance of formal education alongside practical experience.
+<p>
+March 2022 brought another key step in Jake's career when he joined Cloudian Inc as a Partner Development Manager. While at Cloudian, he obtained the Cloudian Pre-Sales Engineer certification, enriching his cloud solutions expertise. This period was also marked by academic success; Jake graduated Cum Laude with an Associate in Applied Science from Lehigh Carbon Community College in May 2023. Additionally, he earned the Google IT Support Professional certification in February 2023.
+<p>
+In 2023, Jake's pursuit of professional development continued with a series of certifications. Alongside his role at The Linux Foundation, he achieved the AWS Certified Cloud Practitioner Certification in December 2023, following the attainment of other notable certifications such as the CCNA: Enterprise Networking, Security, & Automation in May, the OCI Multicloud Architect in September, and the OCI AI Foundations Associate in October. These certifications significantly bolstered his capabilities in cloud computing and AI.
+<p>
+Since joining The Linux Foundation in June 2023, Jake has been focused on Membership Solutions for the Cloud Native Computing Foundation. He is also working towards completing his Bachelor of Science in Information Technology at Western Governors University, anticipated in April 2025. His decision to acquire Databricks certifications in Generative AI Fundamentals and Lakehouse Fundamentals towards the end of 2023 is a clear indication of his commitment to staying updated with the latest IT trends.
+<p>
+Jake's journey from 2013 to the present paints a vivid picture of relentless ambition, strategic career movements, academic dedication, and a continuous commitment to professional development, solidifying his position as a forward-thinking leader in the IT industry.</p><br><!-- About Text 1 -->
 					<a href="index.html#team" class="weight-outline-btn"></a><!-- read more button  -->			
 				</div>
 			</div>
