--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<h1>Welcome to<strong>CloudFi</strong>, a personal project of mine<br />
+					sharing my knowledge of the cloud with<a href="https://www.youtube.com/@CloudFiBeats">music</a>.</h1>
+					<p>Discover my portfolio on <a href="https://github.com/catinahat85/gitgudatcloudnative">Github</a>GitHub</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -34,10 +33,9 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Who Am I?</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI and Cloud Native Technologies.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -117,8 +115,8 @@
 					</header>
 					<p>Sed lacus nascetur ac ante amet sapien.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
+						<li><a href="#" class="button wide primary">GitHub</a></li>
+						<li><a href="#" class="button wide">Youtube</a></li>
 					</ul>
 				</div>
 			</section>
@@ -451,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Untitled</li><li>De: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
