--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Welcome to<strong>CloudFi</strong>, a personal project of mine<br />
-					sharing my knowledge of the cloud with<a href="https://www.youtube.com/@CloudFiBeats">music</a>.</h1>
-					<p>Discover my portfolio on <a href="https://github.com/catinahat85/gitgudatcloudnative">Github</a>GitHub</p>
+					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
+					sharing my knowledge of the cloud with<a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
+					<p>Discover my portfolio on <a href="https://github.com/catinahat85/gitgudatcloudnative">Github</a></p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -35,7 +35,8 @@
 							<header class="major">
 								<h2>Who Am I?</h2>
 							</header>
-							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI and Cloud Native Technologies.</p>
+							<p>I'm a Cloud Engineer on a journey, with experience in Linux, GCP, AWS, Azure, OCI, Databricks, Generative AI, and Cloud Native Technologies.</p>
+							<p>I have a passion for learning and music, and thought it would be helpful to combine both, since not all of us learn in the same way, have access to the same resources, and need extra tools in order to retain information</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -60,12 +61,12 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Learning Resources, Lofi Music<br />
+								and Cloud Project Ideas</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>I will be sharing my learning resources, including ones I have used to learn and implement.</p>
+							<p>On my YouTube is where I will be sharing the creative works that I produced in tandem with my cloud skills and Generative AI. Many chill LoFi beats, but also study crams that I used, which I hope you find useful.</p>
+							<p>In addition to giving you a full view into my stack, and workflow setup, there will be project ideas for you to gain the skills needed to become competent cloud or cloud-native engineers..</p>
 						</div>
 					</div>
 				</div>
@@ -75,30 +76,31 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>I Also Make Children's Books</h2>
+						<p>Ease Into Kubernetes Series</p>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>Because it was too complicated to explain to my kids exactly what I did.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Made for Children</h3>
+							<p>Cloud computing and Containers made simple</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Fun and Quirky</h3>
+							<p>The focus was to make these books feel like Kubernetes, but ELI5. So magical and funny.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Open Source/h3>
+							<p>I publish under Creative Commons, sometimes using borrowed CNCF characters in conjunction with my original characters, but would love to see your takes on them. But please give attribution.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -111,12 +113,13 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Rady to check me out?</h2>
 					</header>
 					<p>Sed lacus nascetur ac ante amet sapien.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button wide primary">GitHub</a></li>
 						<li><a href="#" class="button wide">Youtube</a></li>
+						<li><a href="#" class="button wide">Linkedin</a></li>
 					</ul>
 				</div>
 			</section>
