--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
-					sharing my knowledge of the cloud with<a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
-					<p>Discover my portfolio on <a href="https://github.com/catinahat85/gitgudatcloudnative">Github</a></p>
+					sharing my knowledge of the cloud with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
+					<p>See what I have cooking on <a href="https://github.com/catinahat85">Github</a></p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">See More</a></li>
 					</ul>
 				</div>
 			</section>
@@ -84,7 +84,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<h3>Made for Children</h3>
-							<p>Cloud computing and Containers made simple</p>
+							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -92,15 +92,15 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Fun and Quirky</h3>
-							<p>The focus was to make these books feel like Kubernetes, but ELI5. So magical and funny.</p>
+							<p>There's action, adventure, magic, humor, quirk and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Open Source/h3>
-							<p>I publish under Creative Commons, sometimes using borrowed CNCF characters in conjunction with my original characters, but would love to see your takes on them. But please give attribution.</p>
+							<h3>Open Source</h3>
+							<p>Published under CC-BY 4.0, using CNCF owned characters in conjunction with my original characters, but would love to see your takes on them. Just give attribution.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -113,7 +113,7 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Rady to check me out?</h2>
+						<h2>Ready to check me out?</h2>
 					</header>
 					<p>Sed lacus nascetur ac ante amet sapien.</p>
 					<ul class="actions special">
@@ -445,14 +445,25 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Linkedin</span></a></li>
 					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>De: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; This book is a creative work and is neither made, endorsed, nor sanctioned by the Cloud Native Computing Foundation (CNCF) or The Linux Foundation. The content and narratives in this book are the product of the author's imagination and are used fictitiously. Any resemblance to actual events, locales, real persons, living or dead, or actual entities is purely coincidental. This book does not imply any affiliation with or endorsement by the CNCF or The Linux Foundation.
+
+The characters Phippy, Captain Kube, Zee, Linky and Hazel are owned by The Linux Foundation, on behalf of the Cloud Native Computing Foundation, and licensed under the Creative Commons Attribution License (CC-BY), which means that you can remix, transform, and build upon the material for any purpose, even commercially. If you use the characters, please include the text “phippy.io” to provide attribution (and online, please include a link to https://phippy.io).
+Goldie is based on the Go Gopher, created by Renee French, which is also licensed under CC-BY.
+Images of Phippy, Captain Kube, Goldie, Zee, Linky and Hazel are available in the CNCF artwork repo in svg and png formats and in color, black, and white.
+</li><li>The characters Phippy, Captain Kube, Zee, and the books: The Illustrated Children’s Guide to Kubernetes and Phippy goes to the Zoo, were created by Matt Butcher, Karen Chu, and Bailey Beougher and donated by Microsoft to CNCF. 
+Linky was donated to the CNCF by Buoyant, and represents the Linkerd project. Hazel was donated to the CNCF by Helm maintainers Matt Butcher and Karen Chu, and represents the Helm project.
+
+CNCF and the CNCF logo design are registered trademarks of the Cloud Native Computing Foundation.
+Goldie is based on the Go Gopher, created by Renee French, which is also licensed under CC-BY.
+
+https://phippy.io
+phippy.io
+</li>
 				</ul>
 			</section>
 
