--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</ol>
 								<h5>Icons</h5>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -445,7 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Linkedin</span></a></li>
+					<li><a href="#" class="icon brands alt fa-youtube"><span class="label">Linkedin</span></a></li>
 					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
