--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<header class="major">
 						<h2>Ready to check me out?</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<p>Subscribe, Listen, Learn or Collaborate</p>
 					<ul class="actions special">
 						<li><a href="#" class="button wide primary">GitHub</a></li>
 						<li><a href="#" class="button wide">Youtube</a></li>
