--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to <strong>CloudFi</strong>, a personal project of mine<br />
 					sharing my knowledge of the cloud with <a href="https://www.youtube.com/@CloudFiBeats"><strong>music</strong></a>.</h1>
-					<p>See what I have cooking on <a href="https://github.com/catinahat85">Github</a></p>
+					<p>See what I have cooking on <a href="https://github.com/catinahat85"></a><strong>Github</strong></a></p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">See More</a></li>
 					</ul>
@@ -460,8 +460,7 @@ Linky was donated to the CNCF by Buoyant, and represents the Linkerd project. Ha
 CNCF and the CNCF logo design are registered trademarks of the Cloud Native Computing Foundation.
 Goldie is based on the Go Gopher, created by Renee French, which is also licensed under CC-BY.
 
-https://phippy.io
-phippy.io
+ <a href="https://phippy.io">phippy.io</a>
 </li>
 				</ul>
 			</section>
